Bug 639090: Once you've restarted into safe mode from the menu you cannot restart into normal mode. r=bsmedberg